--- a/src/themes/default/global.css
+++ b/src/themes/default/global.css
@@ -26,6 +26,7 @@ audio[controls] {
 	--cpu-color-transitions : 0s;
 	--cpu-background-transitions : 0s;
 	--cpu-unfold : 0s;
+	--cpu-focus-outline : 8px dashed #f00;
 }
 
 /* If css element queries not available, fallback to media queries */
