aria-label on #control button
Enhance a11y on focus and buttons #116

--- a/src/themes/default/scoped.css
+++ b/src/themes/default/scoped.css
@@ -92,9 +92,9 @@ a {
 }
 
 .act-loading #loading,
-.act-play #play,
-.act-glow #pause,
-.act-pause #pause {
+.act-play #pause,
+.act-glow #play,
+.act-pause #play {
 	display : block;
 }
 
