why it didn't accepted it at load ?
Regression on cpu-controller mode, dynamically interpret attributes changes #128

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,6 +74,7 @@
         const controller = document.createElement('cpu-controller');
         document.querySelector('h1').prepend(controller);
         controller.setAttribute('mode', 'button');
+        controller.setAttribute('hide', 'panels');
     });
 </script>
 <!-- 
