--- a/src/themes/big-square/global.css
+++ b/src/themes/big-square/global.css
@@ -14,16 +14,11 @@ audio[controls] {
 	--cpu-color : #ddd;
 	--cpu-playing-background : #444;
 	--cpu-playing-color : #fff;
-	--cpu-error-background : #a00 ;
-	--cpu-error-color : #ff7 ;
-	--cpu-popup-background : #aaa;
-	--cpu-popup-color : #333;
 	--cpu-cue : #000;
 	--cpu-timeline-limits : #f00;
 	--cpu-color-transitions : 0.1s;
 	--cpu-background-transitions : 0.1s;
-	--cpu-unfold : 0s;
-	--cpu-focus-outline : none; /* you can try 8px dashed #f00; */
+	--cpu-focus-outline : 8px dashed #f00;
 }
 
 /* If css element queries not available, fallback to media queries */
