Too many problems with gh-pages, using absolute URL for live config and chaptering applications
Serious rework on gh-pages #135

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
 <ul id="pieddepage">
     <li><a href="FEATURES">Features</a></li>
     <li><a href="INSTALL">Install</a></li>
-    <li><a href="API">API</a></li>
-    <li><a href="LIVE">Config helper</a></li>
-    <li><a href="TROUBLESHOOTING">Troubles</a></li>
+    <li><a href="https://github.com/dascritch/cpu-audio/blob/master/API.md">API</a></li>
+    <li><a href="https://dascritch.github.io/cpu-audio/applications/live_config.html">Config helper</a></li>
+    <li><a href="https://github.com/dascritch/cpu-audio/blob/master/TROUBLESHOOTING.md">Troubles</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Contribute</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
 </ul>
