--- a/src/themes/default/scoped.css
+++ b/src/themes/default/scoped.css
@@ -86,8 +86,7 @@ b, strong, h5 a {
 	align-self: center;
 }
 
-#control,
-#actions {
+.siders {
 	flex : 0 0 var(--cpu-height);
 	width : var(--cpu-height);
 	max-height : var(--cpu-height);
@@ -151,7 +150,7 @@ b, strong, h5 a {
 	opacity: 1;
 }
 
-#control svg, #actions svg {
+.siders svg {
 	vertical-align : middle;
 	max-width : 100%;
 	max-height : 100%;
@@ -545,8 +544,8 @@ a:hover, button:hover, a:focus, button:focus,
 		padding-bottom: 2px;
 	}
 
-	#control svg, #actions svg {
-		/* Safari iOS is unable to recalc correctly. Keep this.. See https://github.com/dascritch/cpu-audio/issues/138  */
+	.siders svg {
+		/* Safari iOS is unable to recalc correctly. See https://github.com/dascritch/cpu-audio/issues/138  */
 		height : calc(var(--cpu-height) - 16px);
 	}
 }
