The "public" pages have now only absolute URLS and re-read
Serious rework on gh-pages #135

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <h3><a href="https://dascritch.github.io/cpu-audio/">CPU Audio webcomponent</a></h3>
 <ul id="pieddepage">
     <li><a href="FEATURES">Features</a></li>
-    <li><a href="INSTALL">Install</a></li>
+    <li><a href="https://github.com/dascritch/cpu-audio/blob/master/INSTALL.md">Install</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/API.md">API</a></li>
     <li><a href="https://dascritch.github.io/cpu-audio/applications/live_config.html">Config helper</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/TROUBLESHOOTING.md">Troubles</a></li>
