--- a/src/themes/default/scoped.css
+++ b/src/themes/default/scoped.css
@@ -4,7 +4,6 @@
   contain: content;
 }
 
-
 .act-play, .act-buffer {
 	--cpu-background : var(--cpu-playing-background);
 	--cpu-color : var(--cpu-playing-color);
@@ -42,6 +41,7 @@
 }
 
 main {
+	opacity : 1;
 	display : flex;
 	overflow : hidden;
 	height : var(--cpu-height);
