Tweak header. Cannot believe jekyll create numerous H1 : this is really a bad behavior for a11y

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             return;
         }
         const controller = document.createElement('cpu-controller');
-        document.querySelector('h1').prepend(controller);
+        document.querySelector('h1.project-name').prepend(controller);
         controller.setAttribute('mode', 'button');
         controller.setAttribute('hide', 'panels');
     });
