Some graphic tweaks. But still pinned on position:sticky

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,11 @@
 
 .project-name {
     word-break: keep-all;
+    background: #005577;
+    border : 1px solid rgba(255,255,255,0.2);
+    border-radius : 0.3rem;
+    padding: 20px;
+    z-index : 1;
     position : sticky;
     top : 0px;
 }
