Rework on the fail boot
Create persistent cpu-controller #87

--- a/src/themes/default/scoped.css
+++ b/src/themes/default/scoped.css
@@ -19,8 +19,15 @@
 	/* transition : width var(--cpu-unfold); */
 	background : var(--cpu-background);
 	color : var(--cpu-color);
+}
 
-	opacity : 1;
+#interface.no {
+	display : block;
+	pointer-events: none;
+}
+
+#interface.no main {
+	visibility : hidden;
 }
 
 #interface, * {
