--- a/src/themes/big-square/global.css
+++ b/src/themes/big-square/global.css
@@ -21,17 +21,10 @@ audio[controls] {
 	--cpu-focus-outline : 8px dashed #f00;
 }
 
-/* If css element queries not available, fallback to media queries */
-
-@media (max-width: 640px) /*, @element .interface and (max-width: 640px) */ {
+@media (max-width: 640px) {
 	:root , .interface {
 		--cpu-font-size : 13px;
 		--cpu-height : 480px;
-	}
-
-@media (max-width: 480px) /*, @element .interface and (max-width: 480px) */ {
-	:root , .interface {
-		--cpu-height : 100vh;
 	}
 
 }
