--- a/src/themes/default/scoped.css
+++ b/src/themes/default/scoped.css
@@ -35,7 +35,7 @@
 	font-size : var(--cpu-font-size);
 	font-weight: normal;
 	font-style: normal;
-	line-height : 1.2;
+	line-height : var(--cpu-line-height);
 	border : none;
 	padding : 0;
 	margin : 0;
