--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Contribute</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
 </ul>
-<p>Crafted with ♥ from Toulouse, France, for <a href="http://cpu.pm">CPU radio show</a></p>
+<p>Crafted with <span aria-label="love" role="img">♥</span> from Toulouse, France, for <a href="http://cpu.pm">CPU radio show</a></p>
 <script src="./build/cpu-audio.js" async></script>
 <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
